# sysvoice_rec

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
scripts/: install_rust.ps1  install_rust.sh
src/: app.rs  ffmpeg_manager.rs  main.rs  settings.rs
src/audio/: capture.rs  mod.rs
src/encoder/: mod.rs
