[package]
name = "sysvoice_rec"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sysvoice_rec"
path = "src/main.rs"

[dependencies]
eframe = "0.27"
egui   = "0.27"
cpal   = "0.15"
hound  = "3"
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs  = "5"
anyhow    = "1"
thiserror = "1"
log        = "0.4"
env_logger = "0.10"
rfd   = "0.14"
which = "6"

[build-dependencies]
winres = "0.1"
ico    = "0.3"
